WIP: trying different typefaces

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -61,6 +61,10 @@
 // generic {{{
 
 body
+  // font-family Judson
+  // font-family lettering
+  // font-family Lato
+  font-family 'Anonymous Pro'
   line-height 1.5em
   margin 0 auto
   max-width 1000px
