--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -17,6 +17,9 @@ body
 h1, h2, h3, h4
   line-height 1.3em
 
+ol, ul
+  padding-left 25px
+
 li
   margin-top 5px
   margin-bottom 20px
@@ -92,8 +95,9 @@ footer
   #content, #posts, #posts-header
     padding 0 10px
 
-ol, ul
-  padding-left 25px
+  // don't indent lists quite as much for very small screens
+  ol, ul
+    padding-left 20px
 
 
 // }}} dynamic layout
