--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -102,9 +102,9 @@ footer
 
 // }}} dynamic layout
 
-// added by javascript so the background color isn't transitioned on page load
-// (the background color might be changed on page load and that shouldn't be
-// transitioned)
+// this class is added by javascript so the background color isn't
+// transitioned on page load (the background color might be changed on page
+// load and that shouldn't be transitioned)
 .transition-background-color
   transition 0.2s ease background-color
 
