--- a/src/partials/index_start.html
+++ b/src/partials/index_start.html
@@ -4,6 +4,7 @@
   <title>Josh's Blog</title>
   <meta charset=utf-8>
   <link href=/css/style.css rel=stylesheet>
+  <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
 </head>
 
 <body class=light>
