--- a/src/partials/post_start.html
+++ b/src/partials/post_start.html
@@ -5,6 +5,7 @@
   <meta charset=utf-8>
   <link href=/css/pygments.css rel=stylesheet>
   <link href=/css/style.css rel=stylesheet>
+  <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
 </head>
 
 <body class=light>
