--- a/src/partials/index_start.html
+++ b/src/partials/index_start.html
@@ -14,7 +14,7 @@
     id=theme-toggle
     height=24
     width=24
-    alt='light bulb: click here to toggle light/dark themes'
-    title='light bulb: click here to toggle light/dark themes'>
+    alt='toggle light/dark themes'
+    title='toggle light/dark themes'>
     ☼☽
   </a>
