--- a/src/stylus/_pygments.styl
+++ b/src/stylus/_pygments.styl
@@ -2,77 +2,108 @@
 
 // styles from pygments. Retrieved with:
 // pygmentize -f html -S default
+// then cleaned up a bit
+//  - separated light and dark colors
+//  - added a media query so colors wouldn't show up on devices that don't
+//    support it
+//  - removed unneeded syntax
 
-.bp  { color: green                     } // Name.Builtin.Pseudo
-.cp  { color: orange                    } // Comment.Preproc
-.err { border: 1px solid red            } // Error
-.gd  { color: red                       } // Generic.Deleted
-.ge  { font-style: italic               } // Generic.Emph
-.gh  { color: blue; font-weight: bold   } // Generic.Heading
-.gi  { color: green                     } // Generic.Inserted
-.gp  { color: cyan; font-weight: bold   } // Generic.Prompt
-.gr  { color: red                       } // Generic.Error
-.gs  { font-weight: bold                } // Generic.Strong
-.gt  { color: cyan                      } // Generic.Traceback
-.gu  { color: blue; font-weight: bold   } // Generic.Subheading
-.il  { color: cyan                      } // Literal.Number.Integer.Long
-.kc  { color: green; font-weight: bold  } // Keyword.Constant
-.k   { color: yellow; font-weight: bold } // Keyword
-.kd  { color: green; font-weight: bold  } // Keyword.Declaration
-.kn  { color: green; font-weight: bold  } // Keyword.Namespace
-.kp  { color: green                     } // Keyword.Pseudo
-.kr  { color: green; font-weight: bold  } // Keyword.Reserved
-.kt  { color: magenta                   } // Keyword.Type
-.m   { color: cyan                      } // Literal.Number
-.mf  { color: cyan                      } // Literal.Number.Float
-.mh  { color: cyan                      } // Literal.Number.Hex
-.mi  { color: cyan                      } // Literal.Number.Integer
-.mo  { color: cyan                      } // Literal.Number.Oct
-.na  { color: orange                    } // Name.Attribute
-.nb  { color: green                     } // Name.Builtin
-.nc  { color: blue; font-weight: bold   } // Name.Class
-.nd  { color: magenta                   } // Name.Decorator
-.ne  { color: violet; font-weight: bold } // Name.Exception
-.nf  { color: blue                      } // Name.Function
-.nl  { color: green                     } // Name.Label
-.nn  { color: blue; font-weight: bold   } // Name.Namespace
-.no  { color: orange                    } // Name.Constant
-.nt  { color: green; font-weight: bold  } // Name.Tag
-.ow  { color: violet; font-weight: bold } // Operator.Word
-.s1  { color: cyan                      } // Literal.String.Single
-.s2  { color: cyan                      } // Literal.String.Double
-.sb  { color: red                       } // Literal.String.Backtick
-.sc  { color: red                       } // Literal.String.Char
-.s   { color: cyan                      } // Literal.String
-.sd  { color: red; font-style: italic   } // Literal.String.Doc
-.se  { color: orange; font-weight: bold } // Literal.String.Escape
-.sh  { color: red                       } // Literal.String.Heredoc
-.si  { color: violet; font-weight: bold } // Literal.String.Interpol
-.sr  { color: magenta                   } // Literal.String.Regex
-.ss  { color: cyan                      } // Literal.String.Symbol
-.sx  { color: green                     } // Literal.String.Other
-.vc  { color: yellow                    } // Name.Variable.Class
-.vg  { color: blue                      } // Name.Variable.Global
-.vi  { color: blue                      } // Name.Variable.Instance
+@media not print
+  @media (color)
+    .bp  { color: green          } // Name.Builtin.Pseudo
+    .cp  { color: orange         } // Comment.Preproc
+    .err { border: 1px solid red } // Error
+    .gd  { color: red            } // Generic.Deleted
+    .gh  { color: blue           } // Generic.Heading
+    .gi  { color: green          } // Generic.Inserted
+    .gp  { color: cyan           } // Generic.Prompt
+    .gr  { color: red            } // Generic.Error
+    .gt  { color: cyan           } // Generic.Traceback
+    .gu  { color: blue           } // Generic.Subheading
+    .il  { color: cyan           } // Literal.Number.Integer.Long
+    .kc  { color: green          } // Keyword.Constant
+    .k   { color: yellow         } // Keyword
+    .kd  { color: green          } // Keyword.Declaration
+    .kn  { color: green          } // Keyword.Namespace
+    .kp  { color: green          } // Keyword.Pseudo
+    .kr  { color: green          } // Keyword.Reserved
+    .kt  { color: magenta        } // Keyword.Type
+    .m   { color: cyan           } // Literal.Number
+    .mf  { color: cyan           } // Literal.Number.Float
+    .mh  { color: cyan           } // Literal.Number.Hex
+    .mi  { color: cyan           } // Literal.Number.Integer
+    .mo  { color: cyan           } // Literal.Number.Oct
+    .na  { color: orange         } // Name.Attribute
+    .nb  { color: green          } // Name.Builtin
+    .nc  { color: blue           } // Name.Class
+    .nd  { color: magenta        } // Name.Decorator
+    .ne  { color: violet         } // Name.Exception
+    .nf  { color: blue           } // Name.Function
+    .nl  { color: green          } // Name.Label
+    .nn  { color: blue           } // Name.Namespace
+    .no  { color: orange         } // Name.Constant
+    .nt  { color: green          } // Name.Tag
+    .ow  { color: violet         } // Operator.Word
+    .s1  { color: cyan           } // Literal.String.Single
+    .s2  { color: cyan           } // Literal.String.Double
+    .sb  { color: red            } // Literal.String.Backtick
+    .sc  { color: red            } // Literal.String.Char
+    .s   { color: cyan           } // Literal.String
+    .sd  { color: red            } // Literal.String.Doc
+    .se  { color: orange         } // Literal.String.Escape
+    .sh  { color: red            } // Literal.String.Heredoc
+    .si  { color: violet         } // Literal.String.Interpol
+    .sr  { color: magenta        } // Literal.String.Regex
+    .ss  { color: cyan           } // Literal.String.Symbol
+    .sx  { color: green          } // Literal.String.Other
+    .vc  { color: yellow         } // Name.Variable.Class
+    .vg  { color: blue           } // Name.Variable.Global
+    .vi  { color: blue           } // Name.Variable.Instance
 
-.dark .c1 { color: base01; font-style: italic } // Comment.Single
-.dark .c  { color: base01; font-style: italic } // Comment
-.dark .cm { color: base01; font-style: italic } // Comment.Multiline
-.dark .cs { color: base01; font-style: italic } // Comment.Special
-.dark .go { color: base1                      } // Generic.Output
-.dark .ni { color: base0; font-weight: bold   } // Name.Entity
-.dark .nv { color: base0                      } // Name.Variable
-.dark .o  { color: base0                      } // Operator
-.dark .p  { color: base0                      }
-.dark .w  { color: base01                     } // Text.Whitespace
+    .dark
+      .c1 { color: base01 } // Comment.Single
+      .c  { color: base01 } // Comment
+      .cm { color: base01 } // Comment.Multiline
+      .cs { color: base01 } // Comment.Special
+      .go { color: base1  } // Generic.Output
+      .ni { color: base0  } // Name.Entity
+      .nv { color: base0  } // Name.Variable
+      .o  { color: base0  } // Operator
+      .p  { color: base0  }
+      .w  { color: base01 } // Text.Whitespace
 
-.light .c1 { color: base1; font-style: italic } // Comment.Single
-.light .c  { color: base1; font-style: italic } // Comment
-.light .cm { color: base1; font-style: italic } // Comment.Multiline
-.light .cs { color: base1; font-style: italic } // Comment.Special
-.light .go { color: base01                    } // Generic.Output
-.light .ni { color: base00; font-weight: bold } // Name.Entity
-.light .nv { color: base00                    } // Name.Variable
-.light .o  { color: base00                    } // Operator
-.light .p  { color: base00                    }
-.light .w  { color: base1                     } // Text.Whitespace
+    .light
+      .c1 { color: base1  } // Comment.Single
+      .c  { color: base1  } // Comment
+      .cm { color: base1  } // Comment.Multiline
+      .cs { color: base1  } // Comment.Special
+      .go { color: base01 } // Generic.Output
+      .ni { color: base00 } // Name.Entity
+      .nv { color: base00 } // Name.Variable
+      .o  { color: base00 } // Operator
+      .p  { color: base00 }
+      .w  { color: base1  } // Text.Whitespace
+
+.c1 { font-style: italic } // Comment.Single
+.c  { font-style: italic } // Comment
+.cm { font-style: italic } // Comment.Multiline
+.cs { font-style: italic } // Comment.Special
+.ge { font-style: italic } // Generic.Emph
+.gh { font-weight: bold  } // Generic.Heading
+.gp { font-weight: bold  } // Generic.Prompt
+.gs { font-weight: bold  } // Generic.Strong
+.gu { font-weight: bold  } // Generic.Subheading
+.kc { font-weight: bold  } // Keyword.Constant
+.kd { font-weight: bold  } // Keyword.Declaration
+.k  { font-weight: bold  } // Keyword
+.kn { font-weight: bold  } // Keyword.Namespace
+.kr { font-weight: bold  } // Keyword.Reserved
+.nc { font-weight: bold  } // Name.Class
+.ne { font-weight: bold  } // Name.Exception
+.ni { font-weight: bold  } // Name.Entity
+.nn { font-weight: bold  } // Name.Namespace
+.nt { font-weight: bold  } // Name.Tag
+.ow { font-weight: bold  } // Operator.Word
+.sd { font-style: italic } // Literal.String.Doc
+.se { font-weight: bold  } // Literal.String.Escape
+.si { font-weight: bold  } // Literal.String.Interpol
