Add embedding asciicasts
Use the format 'asciicast:#' to embed the asciicast at '#'

Also: use `:xit` over `:wq` to avoid writing files when that's not
needed.

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -144,6 +144,9 @@ footer
 .highlight
   overflow-x auto
 
+iframe[id^=asciicast-iframe]
+  margin 0 auto !important
+
 // solarized colorscheme application {{{
 
 @media not print
