Fix the back link when the last item is an image

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -127,6 +127,10 @@ footer
 #content
   margin-bottom 15px
 
+  // the last link on each post is the back link
+  a:last-of-type
+    display inline-block
+
   li
     margin-bottom 10px
 
