Add download links and generate PDFs
This includes the following changes
- add pdf/org-mode source download links to both the index page and
individual posts' pages
- Refactor the coffeescript so it's easier to read/maintain, and use the
new stuff to toggle the download links

--- a/src/partials/index_start.html
+++ b/src/partials/index_start.html
@@ -12,9 +12,16 @@
   <h1 id=posts-header>Josh's Blog</h1>
 
   <a href=javascript:void(0)
+    id=download-links-toggle
+    class=control-link
+    alt='toggle download links'
+    title='toggle download links'>
+    ↓
+  </a>
+
+  <a href=javascript:void(0)
     id=theme-toggle
-    height=24
-    width=24
+    class=control-link
     alt='toggle light/dark themes'
     title='toggle light/dark themes'>
     ☼☽
