--- a/src/partials/post_end.html
+++ b/src/partials/post_end.html
@@ -1,2 +1,2 @@
-<a href=/ title='back to the list of posts'>← back to the list of posts</a>
+<a href=/ rel=contents alt='back to the list of posts' title='back to the list of posts'>← back to the list of posts</a>
 </section>
