--- a/src/partials/post_start.html
+++ b/src/partials/post_start.html
@@ -9,12 +9,28 @@
 </head>
 
 <body class=light>
+
+  <a href=/
+    id=return-to-home
+    class=control-link
+    alt='back to the list of posts'
+    title='back to the list of posts'
+    rel=contents>
+    ←
+  </a>
+
+  <a href=javascript:void(0)
+    id=download-links-toggle
+    class=control-link
+    alt='toggle download links'
+    title='toggle download links'>
+    ↓
+  </a>
+
   <a href=javascript:void(0)
     id=theme-toggle
-    height=24
-    width=24
+    class=control-link
     alt='toggle light/dark themes'
     title='toggle light/dark themes'>
     ☼☽
   </a>
-  <section id=content>
