Underline links on non 'screen' devices
See https://developer.mozilla.org/en-US/docs/Web/CSS/@media#Media_types
for more info

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -237,7 +237,7 @@ iframe[id^=asciicast-iframe]
       ul
         column-rule-color base1
 
-@media (not color), print
+@media not screen
   a
     text-decoration underline
 
