Refactor the menu
- add a button to toggle it
- float menu items for consistency and ease of development (no more need
for specifying how far from the right each icon will be)

Also:
- separate each page's header from the start of the body (that contains
a different menu for different pages)

--- a/src/partials/post_start.html
+++ b/src/partials/post_start.html
@@ -1,36 +1,33 @@
-<!doctype html>
-<html>
-<head>
-  <title>Josh's Blog</title>
-  <meta charset=utf-8>
-  <meta name=viewport content=initial-scale=1>
-  <link href=/css/style.css rel=stylesheet>
-  <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
-</head>
-
 <body class=light>
+   <a href=javascript:void(0)
+     id=menu-toggle
+     class=menu-item
+     alt='toggle the menu'
+     title='toggle the menu'>
+    ☰
+   </a>
 
-  <a href=/
-    id=return-to-home
-    class=control-link
-    alt='back to the list of posts'
-    title='back to the list of posts'
-    rel=contents>
-    ←
+  <a href=javascript:void(0)
+    id=theme-toggle
+    class=menu-item
+    alt='toggle light/dark themes'
+    title='toggle light/dark themes'>
+    ☼☽
   </a>
 
   <a href=javascript:void(0)
     id=download-links-toggle
-    class=control-link
+    class=menu-item
     alt='toggle download links'
     title='toggle download links'>
     ↓
   </a>
 
-  <a href=javascript:void(0)
-    id=theme-toggle
-    class=control-link
-    alt='toggle light/dark themes'
-    title='toggle light/dark themes'>
-    ☼☽
+  <a href=/
+    id=return-to-home
+    class=menu-item
+    alt='back to the list of posts'
+    title='back to the list of posts'
+    rel=contents>
+    ←
   </a>
