--- a/src/partials/index_start.html
+++ b/src/partials/index_start.html
@@ -1,28 +1,26 @@
-<!doctype html>
-<html>
-<head>
-  <title>Josh's Blog</title>
-  <meta charset=utf-8>
-  <meta name=viewport content=initial-scale=1>
-  <link href=/css/style.css rel=stylesheet>
-  <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
-</head>
-
 <body class=light>
-  <h1 id=posts-header>Josh's Blog</h1>
+  <a href=javascript:void(0)
+    id=menu-toggle
+    class=menu-item
+    alt='toggle the menu'
+    title='toggle the menu'>
+   ☰
+  </a>
+
+  <a href=javascript:void(0)
+    id=theme-toggle
+    class=menu-item
+    alt='toggle light/dark themes'
+    title='toggle light/dark themes'>
+    ☼☽
+  </a>
 
   <a href=javascript:void(0)
     id=download-links-toggle
-    class=control-link
+    class=menu-item
     alt='toggle download links'
     title='toggle download links'>
     ↓
   </a>
 
-  <a href=javascript:void(0)
-    id=theme-toggle
-    class=control-link
-    alt='toggle light/dark themes'
-    title='toggle light/dark themes'>
-    ☼☽
-  </a>
+  <h1 id=posts-header>Josh's Blog</h1>
