Remove unneeded comments

--- a/src/stylus/_colors.styl
+++ b/src/stylus/_colors.styl
@@ -1,5 +1,4 @@
-//FIXME: retain this comment upon minification?
-/*! Colors are from the solorized colorscheme:
+/* Colors are from the solorized colorscheme:
  * http://ethanschoonover.com/solarized
  */
 base0   = #839496
