Add font to styles
http://openfontlibrary.org/en/font/lato-regular

This does a few things:
- Uses the same CDN as the posts
- It (should) compress the fonts

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -2,6 +2,12 @@
 @import '_pygments'
 @import '_vendor'
 
+@font-face
+  font-family 'Lato'
+  font-style normal
+  font-weight normal
+  src url('/fonts/LatoRegular.ttf') format('truetype')
+
 // generic {{{
 
 body
