--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -1,4 +1,3 @@
-@import '_colors'
 @import '_pygments'
 @import '_vendor'
 
@@ -173,6 +172,27 @@ iframe[id^=asciicast-iframe]
 
 @media not print
   @media (color)
+
+    /* Colors are from the solorized colorscheme:
+     * http://ethanschoonover.com/solarized
+     */
+    base0   = #839496
+    base00  = #657b83
+    base01  = #586e75
+    base02  = #073642
+    base03  = #002b36
+    base1   = #93a1a1
+    base2   = #eee8d5
+    base3   = #fdf6e3
+    blue    = #268bd2
+    cyan    = #2aa198
+    green   = #859900
+    magenta = #d33682
+    orange  = #cb4b16
+    red     = #dc322f
+    violet  = #6c71c4
+    yellow  = #b58900
+
     // generic colors (these shouldn't need to change)
     #posts
       li a
