Add new usernames

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,5 +5,8 @@
     <li> fonts from <a href=http://openfontlibrary.org/>open font library</a> </li>
     <li> i'm called <a href=https://github.com/losingkeys>losingkeys</a> on github </li>
     <li> i'm called <a href=https://twitter.com/losingkeys>losingkeys</a> on twitter </li>
+    <li> i'm called <a href=https://www.npmjs.org/~losingkeys>losingkeys</a> on npm </li>
+    <li> i'm called <a href=https://clojars.org/users/losingkeys>losingkeys</a> on clojars </li>
+    <li> i'm called losingkeys on <a href=https://www.freenode.net/>freenode</a> </li>
   </ul>
 </footer>
