Add anchor links to posts
For linking to specific sections

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -140,6 +140,14 @@ footer
   li
     margin-bottom 10px
 
+.anchor-link
+  opacity 0.2
+  padding 5px
+  transition 0.2s ease opacity
+
+  &:hover
+    opacity 1
+
 .back-to-home
   display inline-block
 
