Clean up comments a bit

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -183,7 +183,7 @@ iframe[id^=asciicast-iframe]
   .post-download-link
     display inline-block
 
-// solarized colorscheme application {{{
+// solarized colorscheme {{{
 
 @media not print
   @import _colors
@@ -260,4 +260,4 @@ iframe[id^=asciicast-iframe]
   .menu-item
     display none
 
-// }}} solarized colorscheme application
+// }}} solarized colorscheme
