--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -1,17 +1,11 @@
 @require _pygments
 
-@font-face
-  font-family 'Lato'
-  font-style normal
-  font-weight normal
-  src url('/fonts/LatoRegular.ttf') format('truetype')
-
 // generic {{{
 
 body
-  font-family Lato
-  letter-spacing 0.4px
-  line-height 1.5em
+  font-family sans-serif
+  font-size 1.4em
+  line-height 1.3em
   margin 0 auto
   max-width 900px
   position relative
@@ -138,6 +132,9 @@ footer
 
   li
     margin-bottom 10px
+
+code, .org-src-container
+  font-family monospace
 
 .anchor-link
   opacity 0.2
