--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -10,8 +10,8 @@ body
   max-width 900px
   position relative
 
-h1, h2, h3, h4
-  line-height 1.3em
+h1, h2, h3, h4, h5, h6
+  line-height 1.4em
 
 ol, ul
   padding-left 25px
