Uniform padding on the index page

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -57,13 +57,8 @@ footer
   //   column-count 3
   //   column-gap 30px
 
-  side-padding = 25px
-
-  #content, #posts, posts-header
-    padding 0 side-padding
-
-  #menu-toggle
-    margin-right side-padding
+  body
+    padding 0 25px
 
 @media (max-width: 900px)
   footer ul
@@ -76,13 +71,8 @@ footer
   //   column-count 2
   //   column-gap 30px
 
-  side-padding = 20px
-
-  #content, #posts, #posts-header
-    padding 0 side-padding
-
-  #menu-toggle
-    margin-right side-padding
+  body
+    padding 0 20px
 
 @media (max-width: 700px)
   footer ul
@@ -95,18 +85,12 @@ footer
   //   column-count 1
   //   column-gap 30px
 
-  side-padding = 10px
-
-  #content, #posts, #posts-header
-    padding 0 side-padding
-
-  #menu-toggle
-    margin-right side-padding
+  body
+    padding 0 10px
 
   // don't indent lists quite as much for very small screens
   ol, ul
     padding-left 20px
-
 
 // }}} dynamic layout
 
@@ -122,6 +106,7 @@ footer
 
 #posts
   margin-bottom 30px
+  padding 0
 
   li a
     line-height 1.6em
