--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -4,8 +4,8 @@
 
 body
   font-family sans-serif
-  font-size 1.4em
-  line-height 1.3em
+  font-size 1.4rem
+  line-height 2rem
   margin 0 auto
   max-width 900px
   position relative
@@ -33,6 +33,7 @@ a
 footer
   margin 0 auto 25px
   max-width 900px
+  font-size 1.2rem
 
   ul
     margin 0
@@ -99,14 +100,11 @@ footer
 
 #posts-header
   margin 15px auto 30px
-  font-size 1.5em
+  font-size 2rem
 
 #posts
   margin-bottom 30px
   padding 0
-
-  li a
-    line-height 1.6em
 
 #posts, footer ul
   column-rule 1px dotted
@@ -129,6 +127,9 @@ code, .org-src-container
   &:hover
     opacity 1
 
+.license
+  font-size 1.2rem
+
 .back-to-home
   display inline-block
 
@@ -148,8 +149,8 @@ code, .org-src-container
 .date
   display block
 
-.date, .post-source-link, .post-pdf-link
-  font-size 0.75em
+.date, .post-download-link
+  font-size 1.1rem
 
 .highlight
   overflow-x auto
