--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -4,17 +4,14 @@
 
 body
   font-family sans-serif
-  font-size 1.4em
-  line-height 1.3em
+  font-size 1.4rem
+  line-height 1.8rem
   margin 0 auto
   max-width 900px
   position relative
 
 h1, h2, h3, h4, h5, h6
-  line-height 1.4em
-
-h1, h2, h3, h4, h5, h6, p, pre
-  margin 0.7em 0
+  line-height 1.4rem
 
 ol, ul
   padding-left 25px
@@ -36,6 +33,7 @@ a
 footer
   margin 0 auto 25px
   max-width 900px
+  font-size 1.2rem
 
   ul
     margin 0
@@ -102,14 +100,11 @@ footer
 
 #posts-header
   margin 15px auto 30px
-  font-size 1.5em
+  font-size 2rem
 
 #posts
   margin-bottom 30px
   padding 0
-
-  li a
-    line-height 1.6em
 
 #posts, footer ul
   column-rule 1px dotted
@@ -152,7 +147,7 @@ code, .org-src-container
   display block
 
 .date, .post-source-link, .post-pdf-link
-  font-size 0.75em
+  font-size 1.1rem
 
 .highlight
   overflow-x auto
