--- a/src/partials/index_start.html
+++ b/src/partials/index_start.html
@@ -1,16 +1,14 @@
 <body class=light>
   <a href=javascript:void(0)
-    id=theme-toggle
-    class=menu-item
-    title='toggle light/dark themes'>
-    ☼☽
-  </a>
-
-  <a href=javascript:void(0)
     id=download-links-toggle
     class=menu-item
     title='toggle download links'>
     ↓
   </a>
-
-  <h1 id=posts-header>Josh's Blog</h1>
+  <a href=javascript:void(0)
+    id=theme-toggle
+    class=menu-item
+    title='toggle light/dark themes'>
+    ☼☽
+  </a>
+  <h1>Josh's Blog</h1>
