--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -38,6 +38,10 @@ footer
     padding 0
     text-align center
 
+h1
+  border-bottom 1px solid
+  padding-bottom 10px
+
 // }}} generic
 
 // this class is added by javascript so the background color isn't
@@ -194,6 +198,9 @@ iframe[id^=asciicast-iframe]
     a:focus
       background-color base2
 
+    h1
+      border-bottom-color rgba(131, 148, 150, 0.25)
+
     h1, .menu-item
       color base01
 
@@ -212,6 +219,9 @@ iframe[id^=asciicast-iframe]
     a:active
     a:focus
       background-color base02
+
+    h1
+      border-bottom-color rgba(101, 123, 131, 0.25)
 
     h1, .menu-item
       color base1
